[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eplan_parser"
version = "0.5"
authors = [
  { name="Alex Sartori", email="alex.sartori1997@gmail.com" },
]
description = "Parser for the output files of EnergyPLAN"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
	"Development Status :: 4 - Beta",
	"Topic :: Utilities",
	"Topic :: Scientific/Engineering",
]

[project.scripts]
eplan_parser = "eplan_parser.output_parser:run_from_terminal"

[project.urls]
"Homepage" = "https://github.com/AlexSartori/eplan_parser"
